--- a/frontend/src/components/CreateBoard/CreateBoard.css
+++ b/frontend/src/components/CreateBoard/CreateBoard.css
@@ -1,39 +1,37 @@
-.create-brd-btn{
-    background-color: #fafbfc;
-    border: 1px solid #1b1f2326;
-    box-shadow: 0 1px 0 #1b1f230a, inset 0 1px 0 #ffffff40;
-    color: #24292e;
-    margin-top: 20px;
-
+.create-brd-btn {
+  background-color: #fafbfc;
+  border: 1px solid #1b1f2326;
+  box-shadow: 0 1px 0 #1b1f230a, inset 0 1px 0 #ffffff40;
+  color: #24292e;
+  margin-top: 20px;
 }
 
-
 .modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.4);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .modal {
-    background: white;
-    padding: 2rem;
-    border-radius: 10px;
-    position: relative;
-    width: 300px;
-  }
+.modal {
+  background: white;
+  padding: 2rem;
+  border-radius: 10px;
+  position: relative;
+  width: 300px;
+}
 
-  .close-btn {
-    position: absolute;
-    top: 8px;
-    right: 8px;
-    border: none;
-    background: none;
-    font-size: 1.2rem;
-    cursor: pointer;
-  }
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  border: none;
+  background: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
