--- a/frontend/src/components/Card/CardDetails.css
+++ b/frontend/src/components/Card/CardDetails.css
@@ -29,3 +29,147 @@
   color: #ccc;
   background-color: rgba(255, 255, 255, 0.8);
 }
+
+.card-content {
+    background-color: var(--background-color);
+    border-radius: 10px;
+    padding: 1rem;
+    margin: 1rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    color: var(--text-color);
+    border : 1px solid var(--border-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 250px;
+  }
+
+  .image-container img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+
+  .card-content h3 {
+    font-size: 1.2rem;
+    margin: 0.5rem 0;
+  }
+
+  .card-content p {
+    font-size: 0.95rem;
+    margin: 0.3rem 0;
+  }
+
+
+  /* .card-content button {
+    margin: 0.3rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 6px;
+    font-size: 0.9rem;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+  } */
+
+  .up-vote {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .comment-btn {
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .delete-btn-card{
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
+    border-radius: 5px;
+    cursor: pointer;
+  }
+.card-buttons{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  flex-direction: row;
+  gap: 1rem;
+}
+
+
+
+
+@media (max-width: 768px) {
+    .card-content {
+        flex: 1 1 100%;
+        max-width: 100%;}}
+
+
+
+  .card-content:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.12);
+  }
+
+
+  .card-content h3 {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin: 8px 0 4px;
+    color: #222;
+  }
+
+
+  .card-content p {
+    font-size: 0.95rem;
+    color: #666;
+    margin-bottom: 12px;
+  }
+
+
+  .up-vote:hover {
+    background-color: #dc2fbf;
+    color: #fff;
+  }
+
+  .delete-btn-card {
+    background-color: #0f766e;
+    color: #fff;
+  }
+
+  .delete-btn-card:hover {
+    background-color: #115e59;
+  }
+  body.dark .card-content {
+    background-color: #1f2937;
+    border: 1px solid #374151;
+  }
+
+  body.dark .card-content h3 {
+    color: #f3f4f6;
+  }
+
+  body.dark .card-content p {
+    color: #cbd5e1;
+  }
+
+
+  body.dark .delete-btn-card {
+    background-color:#0d9488  ;
+  }
+
+  body.dark .delete-btn-card:hover {
+    background-color:  #c11111;
+  }
+
+  body.dark .comment-btn:hover {
+    background-color:  #3512ce;
+  }
