--- a/frontend/src/components/Card/CardList.css
+++ b/frontend/src/components/Card/CardList.css
@@ -1,7 +1,7 @@
-.board-cards{
+.card-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
-    padding: 20px;
-}
+    gap: 1.5rem;
+    padding: 2rem;
+  }
