--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,18 +1,19 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  max-width: 100vw;
+  margin: 0;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--background);
+  color: var(--text-color);
 }
 
-body{
-  background-color: white;
-  color: black;
-}
-
-body.dark{
-  background-color: rgb(59, 52, 52);
-  color: white;
+html, body, #root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  background-color: var(--background);
+  color: var(--text-color);
 }
 
 .toggle-btn{
@@ -22,5 +23,20 @@ body.dark{
   z-index: 999;
   padding: 0.5rem 1rem;
   cursor: pointer;
+  color: var(--text-color);
+  background-color: var(--background);
+  border: 1px solid var(--border-color);
 
+}
+
+:root{
+  --background:#ffffff;
+  --text-color: #000000;
+  --border-color: #000000;
+}
+
+body.dark{
+  --background: #030202;
+  --text-color: #eeeeee;
+  --border-color:white;
 }
