--- a/frontend/src/components/Card/CreateCard.css
+++ b/frontend/src/components/Card/CreateCard.css
@@ -17,16 +17,76 @@
     width: 150px;
 }
 
-.modal-content{
-    background-color: #ce0505;
-    box-shadow: 0 4px 8px #0000001a;
-    height: auto;
-    left: 50%;
-    max-width: 500px;
-    padding: 20px;
-    position: fixed;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    z-index: 1001;
+
+.create-card{
+    background-color: var(--background);
+    border: 1px solid var(--border-color);
+    box-shadow: 0 1px 0 #1b1f230a, inset 0 1px 0 #ffffff40;
+    color: var(--text-color);
+    margin-top: 20px;
+
 }
+
+
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    display: flex;
+    z-index: 999;
+    backdrop-filter: blur(2px);
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-content {
+    background: var(--background);
+    padding: 2rem;
+    border-radius: 10px;
+    border: 1px solid var(--border-color);
+    position: relative;
+    width: 90%;
+    max-width: 500px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    text-align: left;
+  }
+
+  .close-btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    border: none;
+    background: none;
+    font-size: 1.2rem;
+    cursor: pointer;
+    color: var(--text-color);
+  }
+
+  .modal-content input, .modal-content select{
+    color: var(--text-color);
+    background: var(--background);
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    width: 100%;
+    padding: 0.75rem 0.75rem;
+    margin-bottom: 1rem;
+  }
+
+
+  .create-btn {
+    background-color: var(--background);
+    border: 1px solid var(--border-color);
+    box-shadow: 0 1px 0 #1b1f230a, inset 0 1px 0 #ffffff40;
+    color: var(--text-color);
+    margin-top: 20px;
+    width: 100%;
+  }
+
+  .create-btn:hover {
+    background-color:#006666;
+    color: var(--text-color);
+  }
