--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -1,12 +1,18 @@
 .banner {
-    color: white;
     font-family: sans-serif;
     padding: 20px;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    margin-top: 0;
+    padding-top: 0;
+    z-index: 10090;
+    width: 100%;
 }
 
 header {
     display: block;
     unicode-bidi: isolate;
+
 }
 
 img {
